--- a/src/app/pages/project-detail/project-detail.component.html
+++ b/src/app/pages/project-detail/project-detail.component.html
@@ -1,5 +1,8 @@
 <!-- ---------------------------------------- -->
-<h1>{{project?.name}}</h1>
+<div style="display: block;">
+<i nz-icon nzType="home" nzTheme="outline" style="font-size: 30px;display: inline-block;color: chocolate;"></i>
+<h1 style="display: inline-block;margin-left: 3px;color:darkcyan;">{{project?.name}}</h1>
+</div>
 <nz-modal [(nzVisible)]="isVisible" nzTitle="<i>New Tab<i>" (nzOnCancel)="handleCancel()" (nzOnOk)="onSubmit()">
   <form nz-form [nzLayout]="'inline'" [formGroup]="requestForm" (ngSubmit)="onSubmit()">
     <div style="display: block;" class="form=form-group">
@@ -27,10 +30,14 @@
               <input type="text" nz-input nzSize="default" style="width: 300px;display:inline-block" [(ngModel)]="task.description"/>
               <button nz-button style="display: inline-block;margin-left: 5px;" nzType="default" (click)="saveTask(task.id,task.description)" >Save</button>
             </ng-template>
-            <!-- <a style="display: inline-block;">{{task.description}}</a> -->
-            <nz-progress nzType="line" [nzPercent]="task.process"
-              [nzStrokeColor]="{ '0%': '#f44336', '100%': '#87d068' }"></nz-progress>
+            <!-- <p> revertDate(task.deadline)" | date:'yyyy-MM-dd HH:mm:ss'</p> -->
+            <div style="display: block;">
+                <!-- <i nz-icon nzType="clock-circle" style="display: inline-block;margin-left:710px;color:red;"></i>  -->
+            <countdown-timer style="display: inline-block;margin-left: 850px;color:red;" [end]="task.deadline | date:'yyyy-MM-dd HH:mm:ss'"></countdown-timer>
+              </div>
           </div>
+          <nz-progress nzType="line" [nzPercent]="task.process"
+              [nzStrokeColor]="{ '0%': '#f44336', '100%': '#87d068' }"></nz-progress>
           <ng-template #extraTask>
             <!-- --------------transfer task---------------------- -->
             <nz-button-group>
@@ -116,9 +123,21 @@
 <nz-modal [(nzVisible)]="isVisibleJob" [nzClosable]="false" [nzTitle]="modalTitle" [nzContent]="modalContent"
   [nzFooter]="modalFooter">
   <ng-template #modalTitle>
-    <div style="display: block;"></div>
-    <i nz-icon nzType="home" nzTheme="outline" style="display: inline-block;font-size: 18px;"></i>
-    <p style="display: inline-block;margin-left: 10px;">{{data?.name}}</p>
+    <div style="display: block;">
+    <i nz-icon nzType="home" nzTheme="outline" style="display: inline-block;font-size: 20px;color: darkblue;"></i>
+    <p style="display: inline-block;margin-left: 10px;font-size: 20px;color: darkblue;">{{data?.name}}</p>
+    <p style="display: inline-block;margin-left: 120px;font-size: 16px;color: brown;">Deadline:</p>
+    <nz-date-picker
+    [nzAutoFocus]="true"
+    style="display: inline-block;float:right;"
+    nzShowTime
+    nzFormat="HH:mm:ss dd-MM-yyyy "
+    nzPlaceHolder="Select Time"
+    [ngModel]="date"
+    (ngModelChange)="onChange($event)"
+   (nzOnOk)="onOk($event)"
+  ></nz-date-picker>
+  </div>
   </ng-template>
 
   <ng-template #modalContent>
@@ -132,8 +151,6 @@
           <div style="display: block;">
           <label nz-checkbox nzValue="{{job?.id}}" [ngModel]="checkStatus(job?.status)"
             (click)="logJob(job.id)" style="display: inline-block">{{job?.content}}</label>
-            <!-- <button nz-button style="display: inline-block;float:right">...</button> -->
-            <!-- <p style="display: inline-block;float:right;">...</p> -->
           </div>
         </div>
       </div>
@@ -164,7 +181,7 @@
 
     <nz-list *ngIf="comments.length" [nzDataSource]="comments" [nzRenderItem]="item" [nzItemLayout]="'horizontal'">
       <ng-template #item let-item>
-        <nz-comment [nzAuthor]="item?.userDTO.email" [nzDatetime]="displayTime(item.updateAt)">
+        <nz-comment [nzAuthor]="item?.userDTO.email" [nzDatetime]="displayTime(item.updateAt)"> 
           <nz-avatar nz-comment-avatar nzIcon="user" nzSrc="//zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png">
           </nz-avatar>
           <nz-comment-content style="display: block;">
@@ -203,3 +220,5 @@
     <button nz-button nzType="default" (click)="handleCancelJob()">Close</button>
   </ng-template>
 </nz-modal>
+ 
+
