--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -1,4 +1,4 @@
-<h1 style="color: #40a9ff">
+<h1 style="color:white">
   CATEGORY
 </h1>
 
@@ -24,8 +24,8 @@
   </div>
 </div>
 
-<br/><br/><br/>
-<nz-table #editRowTable nzBordered [nzData]="data">
+<br/>
+<nz-table #editRowTable nzBordered [nzData]="data" style="background: rgb(237, 243, 219);">
   <thead>
   <tr>
     <th nzWidth="20%">ID</th>
